spade-tests/src/snapshots/spade_tests__typeinference__type_error_on_port_set_mismatch.snap
---
source: spade-tests/src/typeinference.rs
---
// NOTE: returning bool because we don't support unit types
entity set_port(p: &mut int<10>, v: int<9>) -> bool {
    set p = v;
    false
}


error: Expected type int<10>, got int<9>
  ┌─ testinput:3:13
  │
3 │     set p = v;
  │             ^ Expected int<10>
  │
  = note: Expected: 10
                in: int<10>
               Got: 9
                in: int<9>


